# video-to-3dgs

./: .gitignore  README.md  export.py  main.py  pyproject.toml  run.py  setup.sh
src/: exporter.py  frame_extractor.py  gaussian_trainer.py  pose_estimator.py
