[project]
name = "vt302"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gsplat>=1.0",
    "imageio[ffmpeg]>=2.37.3",
    "lpips>=0.1.4",
    "matplotlib>=3.11.0",
    "nerfview>=0.1.3",
    "opencv-python>=4.13.0.92",
    "piexif>=1.1.3",
    "pillow>=12.2.0",
    "plyfile>=1.1.4",
    "pycolmap>=4.0.4",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "splines>=0.3.3",
    "tensorboard>=2.20.0",
    "tensorly>=0.9.0",
    "torch>=2.12.0",
    "torchmetrics[image]>=1.9.0",
    "torchvision>=0.27.0",
    "tqdm>=4.68.2",
    "tyro>=0.8.8",
    "viser>=1.0.30",
]
