[project]
name = "video-to-3dgs"
version = "0.1.0"
description = "Video to 3D Gaussian Splatting: end-to-end indoor scene reconstruction from phone video."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gsplat>=1.0",
    "numpy",
    "opencv-python",
    "Pillow",
    "plyfile",
    "pycolmap",
    "scipy",
    "scikit-learn",
    "torch>=2.1",
    "torchvision",
    "torchmetrics[image]",
    "tqdm",
    "imageio[ffmpeg]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
